--- a/tic-tac-toe/src/components/Game/Game.css
+++ b/tic-tac-toe/src/components/Game/Game.css
@@ -1,5 +1,6 @@
 .Game {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   font-family: 'Helvetica', 'Arial', sans-serif;
 }
@@ -7,9 +8,9 @@
 .Game__info {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   background-color: #FFA07A;
   border-radius: 5px;
-  height: max-content;
   padding: 10px;
 }
 
@@ -17,4 +18,19 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+@media (max-width: 412px) {
+  .Game {
+    gap: 5px;
+  }
+  .Game__info {
+    height: 200px;
+  }
+}
+
+p, h3 {
+  padding: 0;
+  margin: 0;
+  line-height: 30px;
 }
